--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
-    "nuxt": "^2.13.0",
-    "nuxt-buefy": "^0.3.31"
+    "nuxt": "^2.13.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/vuetify": "^1.11.2"
+  }
 }
