--- a/web-client/package.json
+++ b/web-client/package.json
@@ -6,14 +6,13 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "export": "nuxt export",
-    "serve": "nuxt serve"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.11.0",
-    "nuxt": "^2.13.0"
+    "@nuxtjs/axios": "^5.12.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
+    "nuxt": "^2.14.0"
   },
-  "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.2"
-  }
+  "devDependencies": {}
 }
